unpackaged/main/default/objects/ETST_Price_List__c/ETST_Price_List__c.object-meta.xml
<CustomObject>
    <label>Price List</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Price List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>