unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_AR_Customer_number__c.field-meta.xml
<CustomField>
    <fullName>ETST_AR_Customer_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AR Customer number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>