unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>ETST_Cancellation_Fee__c</fullName>
    <label>Cancellation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>