unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Cancellation_Mode__c.field-meta.xml
<CustomField>
    <fullName>ETST_Cancellation_Mode__c</fullName>
    <label>Cancellation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>