unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Cheque_Payment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ETST_Cheque_Payment_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Payment Allowed</label>
    <type>Checkbox</type>
</CustomField>