unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>ETST_Contract_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Line</label>
    <length>80</length>
    <type>Text</type>
</CustomField>