unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Contract_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>