unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Courier_Address__c.field-meta.xml
<CustomField>
    <fullName>ETST_Courier_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Courier Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>