unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Half_Yearly_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ETST_Half_Yearly_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Half Yearly Allowed</label>
    <type>Checkbox</type>
</CustomField>