unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ETST_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>