unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETST_Maintenance_Amount__c</fullName>
    <label>Maintenance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>