unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Max_Duration__c.field-meta.xml
<CustomField>
    <fullName>ETST_Max_Duration__c</fullName>
    <label>Max Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>