unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_On_Demand_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ETST_On_Demand_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Demand Allowed</label>
    <type>Checkbox</type>
</CustomField>