unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Ondemand_Rate_per_Day__c.field-meta.xml
<CustomField>
    <fullName>ETST_Ondemand_Rate_per_Day__c</fullName>
    <label>Ondemand Rate per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>