unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_Org_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>