unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Other_Deductions_Value__c.field-meta.xml
<CustomField>
    <fullName>ETST_Other_Deductions_Value__c</fullName>
    <label>Other Deductions Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>