unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Other_Services__c.field-meta.xml
<CustomField>
    <fullName>ETST_Other_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Services</label>
    <type>TextArea</type>
</CustomField>