unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Other_Services_Cost__c.field-meta.xml
<CustomField>
    <fullName>ETST_Other_Services_Cost__c</fullName>
    <label>Other Services Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>