unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Payee__c.field-meta.xml
<CustomField>
    <fullName>ETST_Payee__c</fullName>
    <label>Payee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>