unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Price_List__c.field-meta.xml
<CustomField>
    <fullName>ETST_Price_List__c</fullName>
    <label>Price List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>