unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_PriceList_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_PriceList_Unique_Id__c</fullName>
    <formula>ETST_School_Ref_Id__c + TEXT(ETST_Transport_Type__c) + ETST_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceList Unique Id</label>
    <type>Text</type>
</CustomField>