unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Pro_Rate__c.field-meta.xml
<CustomField>
    <fullName>ETST_Pro_Rate__c</fullName>
    <label>Pro Rate By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>