unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>ETST_Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>ET_Sales_Agreement__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>