unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_School__c.field-meta.xml
<CustomField>
    <fullName>ETST_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>