unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_School_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Commission_Value__c</fullName>
    <label>School Commission Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>