unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_School_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>