unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ETST_Tax_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>