unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETST_Total_Amount__c</fullName>
    <description>It is the calculated amount for pick up and drop</description>
    <formula>ETST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>