unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Transport_Type__c</fullName>
    <label>Transport Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Two Way</fullName>
            </value>
            <value>
                <fullName>Pick up only</fullName>
            </value>
            <value>
                <fullName>Drop off only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>