unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Yearly_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ETST_Yearly_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yearly Allowed</label>
    <type>Checkbox</type>
</CustomField>