unpackaged/main/default/objects/ETST_Price_List__c/fields/ETST_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETST_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>