unpackaged/main/default/objects/ETST_Price_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETST_Is_Active__c</columns>
    <columns>ETST_Half_Yearly_Allowed__c</columns>
    <columns>ETST_On_Demand_Allowed__c</columns>
    <columns>ETST_Pro_Rate__c</columns>
    <columns>ETST_School_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETST_Monthly_Allowed__c</columns>
    <columns>ETST_Cancellation_Fee__c</columns>
    <columns>ETST_Cancellation_Mode__c</columns>
    <columns>ETST_Zone__c</columns>
    <columns>ETST_Area__c</columns>
    <columns>ETST_Amount__c</columns>
    <columns>ETST_Fare_Amount__c</columns>
    <columns>ETST_Payee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>